[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Island/IslandGeneration.gd" type="Script" id=1]
[ext_resource path="res://scenes/Strand/StrandList.gd" type="Script" id=2]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/Strand/Entry.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.184314, 0.462745, 1, 0.839216 )

[sub_resource type="Shader" id=2]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

uniform vec3 grass_color = vec3(0.0, 0.6, 0.1);
uniform vec3 water_color = vec3(0.0, 0.1, 0.8);

varying flat vec3 out_color;

void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	out_color=grass_color;
}


void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = out_color * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/albedo = Color( 0.12549, 0.682353, 0.160784, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/grass_color = Vector3( 0, 0.6, 0.1 )
shader_param/water_color = Vector3( 0, 0.1, 0.8 )

[node name="Island" type="Spatial"]
script = ExtResource( 1 )

[node name="Ocean" type="CSGBox" parent="."]
width = 1000.0
height = 0.1
depth = 1000.0
material = SubResource( 4 )

[node name="GeneratedIsland" type="MeshInstance" parent="."]
material_override = SubResource( 3 )
skeleton = NodePath("../..")

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="StrandList" type="VBoxContainer" parent="Interface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -231.0
margin_top = -306.0
margin_right = 191.0
margin_bottom = -40.0

[node name="Strand1" parent="Interface/StrandList" instance=ExtResource( 4 )]
margin_right = 453.0
rect_pivot_offset = Vector2( -915.084, 279.296 )

[node name="Strand2" parent="Interface/StrandList" instance=ExtResource( 4 )]
margin_top = 54.0
margin_right = 453.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( -915.084, 279.296 )

[node name="Strand3" parent="Interface/StrandList" instance=ExtResource( 4 )]
margin_top = 108.0
margin_right = 453.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( -915.084, 279.296 )

[node name="Strand4" parent="Interface/StrandList" instance=ExtResource( 4 )]
margin_top = 162.0
margin_right = 453.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( -915.084, 279.296 )

[node name="Strand5" parent="Interface/StrandList" instance=ExtResource( 4 )]
margin_top = 216.0
margin_right = 453.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( -915.084, 279.296 )

[node name="RenameLinkPanel" type="Panel" parent="Interface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -83.0
margin_right = 169.0
margin_bottom = -25.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/RenameLinkPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/RenameLinkPanel/VBoxContainer"]
margin_right = 338.0
margin_bottom = 30.0

[node name="RichTextLabel" type="Label" parent="Interface/RenameLinkPanel/VBoxContainer/HBoxContainer"]
margin_right = 168.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 3 )
text = "Topic of the strand"
align = 1
valign = 1

[node name="NewNameInput" type="TextEdit" parent="Interface/RenameLinkPanel/VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 338.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="RenameBtn" type="Button" parent="Interface/RenameLinkPanel/VBoxContainer"]
margin_top = 34.0
margin_right = 338.0
margin_bottom = 64.0
theme = ExtResource( 3 )
text = "Rename"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Interface/RenameLinkPanel/VBoxContainer/RenameBtn" to="Interface/StrandList" method="_on_RenameBtn_pressed"]
